Enhanced GeolocationEndpoint data collection and added curl parameters for SRIforLCS-PSL and SRI-PSI MAP operations to be executed by Restcomm GMLC, longitude and latitude API simulated response from latter operations working OK, besides MAP ATI